SERVER-72512 Ensure validate surfaces index key inconsistencies if they exist